--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -1,7 +1,6 @@
 @use "./variables";
 
 
-
 .headerImgContainer {
     position: absolute;
     top: 150px;
@@ -16,7 +15,6 @@ h2 {
 .blogPosts {
     background-color: variables.$iceBlue;
 }
-
 
 .blogGallery {
     display: flex;
@@ -49,7 +47,6 @@ h2 {
     padding: 20px;
 }
 
-
 .fa-solid {
     background-color: variables.$dandelion;
     color: variables.$twilightBlue;
@@ -59,8 +56,8 @@ h2 {
 
 .programs, .locations {
     display: flex;
-    //justify-content: center;
     background-color: variables.$twilightBlue;
+
     p {
     color: variables.$white;
     }
@@ -98,13 +95,11 @@ h2 {
     width: 40%;
 }
 
-
 .locations img {
     box-shadow: -10px 10px 0 variables.$dandelion;
     position: relative;
-    bottom: -100;
+    bottom: -20px;
 }
-
 
 h3 {
     color: variables.$white;
@@ -137,16 +132,19 @@ h4 {
     display: flex;
     background-color: variables.$iceBlue;
     margin: 0;
+    padding: 50px 100px;
 
     img {
-        margin: 40px 40px 40px 60px;
-        width: 65%;
         box-shadow: -10px 10px 0 variables.$dandelion;
     }
 
     .textContainer {
-        padding: 40px;
-        width: 50%;
+        padding-left: 50px;
+        width: 75%;
+    }
+
+    .imgContainer {
+        width: 25%;
     }
 }
 
@@ -211,7 +209,6 @@ footer {
     top: 300px;
     right: 15px;
  
-
     input {
         background-color: variables.$twilightBlue;
         color: variables.$white;
@@ -228,23 +225,18 @@ footer {
         margin: 50px 20px 20px 80px;
         resize: none;
         padding: 20px 0px 0px 20px;
-
-            &::placeholder {
-                    color: variables.$white;
-                    line-height: 1.2rem;
-                }
     }
 
     button {
-    margin: 20px 20px 20px 80px;
-    padding: 0px 240px;    
+        margin: 20px 20px 20px 80px;
+        padding: 0px 240px;    
     }
 }
 
 .iconsContact {
     color: variables.$twilightBlue;
     display: flex;
-    padding: 100px 20px 0px 50px ;
+    padding: 100px 20px 0px 50px;
 
     .fa-instagram {
         padding: 0 15px;
@@ -266,13 +258,10 @@ footer {
     display: flex;
 }
 
-.mission {
-
-    img {
-        width: 30%;
-        margin-top: 60px;
-        box-shadow: 10px 10px 0 variables.$twilightBlue;
-    }
+.mission img {
+    width: 30%;
+    margin-top: 60px;
+    box-shadow: 10px 10px 0 variables.$twilightBlue;
 }
 
 .missionTextContainer {
@@ -310,16 +299,13 @@ aside {
     right: 0;
 }
 
-.articleImgContainer {
-        img {
-                
-        width: 100%;
-        box-shadow: -10px 10px 0 variables.$dandelion;
-            }
+.articleImgContainer img {     
+    width: 100%;
+    box-shadow: -10px 10px 0 variables.$dandelion;
 }
 
-.articleTextContainer {
 
+.articleTextContainer {
     padding: 100px;
     border: solid 3px variables.$dandelion;
     border-top: none;
@@ -329,7 +315,6 @@ aside {
     p {
         font-size: 0.7rem;
     }
-
 }
 
 .comments {
