--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -30,13 +30,14 @@ a:focus {
     border-bottom: solid variables.$dandelion;
 }
 
-.fa-bars {
+i.fa-bars {
     position: absolute;
     top: 25px;
     left: 25px;
     font-size: 3rem;
     visibility: hidden;
     color: variables.$white;
+    transition: 0.3s;
 }
 
 //CONTACT US HEADER
