--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,13 +40,15 @@ a:focus {
   border-bottom: solid #FDD908;
 }
 
-.fa-bars {
+i.fa-bars {
   position: absolute;
   top: 25px;
   left: 25px;
   font-size: 3rem;
   visibility: hidden;
   color: #FFFFFF;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .headerContact {
@@ -573,11 +575,12 @@ aside {
 
 @media (max-width: 480px) {
   h1 {
-    margin-top: 0;
+    margin: 0;
     padding-top: 0;
   }
   i.fa-bars {
     visibility: visible;
+    cursor: pointer;
   }
   .blogGallery {
     -webkit-box-orient: vertical;
@@ -600,6 +603,10 @@ aside {
   .mainMenu {
     display: none;
   }
+  .headerBlog h1 {
+    margin: 0;
+    padding: 100px 0px 0px 100px;
+  }
   .articleTextContainer {
     padding: 10px;
   }
@@ -614,6 +621,10 @@ aside {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .headerContact {
+    margin: 0;
+    padding-top: 100px;
   }
   .contactForm {
     margin: 100px 30px 300px 0px;
