--- a/styles/styles.css
+++ b/styles/styles.css
@@ -480,6 +480,10 @@ aside {
   margin-bottom: 20px;
 }
 
+.closeIcon {
+  display: none;
+}
+
 @media (max-width: 1085px) {
   .headerImgContainer {
     margin: 350px 200px 0px 0px;
